[tool.poetry]
name = "script-languages-container-ci"
version = "0.1.0"
description = "Implements CI builds for script-language-container."

license = "MIT"

authors = [
    "Thomas Uebensee <ext.thomas.uebensee@exasol.com>"
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
click = "^8.0.3"
GitPython = ">=3.1.0"
#exasol_script_languages_container_tool = { url = "https://github.com/exasol/script-languages-container-tool/releases/download/0.9.0/exasol_script_languages_container_tool-0.9.0-py3-none-any.whl" }
exasol-script-languages-container-tool = {git = "https://github.com/exasol/script-languages-container-tool.git", branch="feature/121_install_starter_scripts_via_python"}

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
toml = ">=0.10.2"