[tool.poetry]
name = "exasol-script-languages-container-ci"
version = "0.4.0"
description = "Implements CI builds for script-language-container."

license = "MIT"

authors = [
    "Thomas Uebensee <ext.thomas.uebensee@exasol.com>"
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4.0"
click = "^8.0.3"
GitPython = ">=3.1.0"
exasol_script_languages_container_tool = { url = "https://github.com/exasol/script-languages-container-tool/releases/download/0.14.0/exasol_script_languages_container_tool-0.14.0-py3-none-any.whl" }
exasol-integration-test-docker-environment = {url = "https://github.com/exasol/integration-test-docker-environment/releases/download/0.11.0/exasol_integration_test_docker_environment-0.11.0-py3-none-any.whl"}
PyGithub = "^1.55.0"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
toml = ">=0.10.2"
pytest = "^7.1.1"
pytest-mock = "^3.7.0"


[tool.pytest.ini_options]
minversion = "6.0"

testpaths = [
    "test"
]
