[project]
name = "exasol-script-languages-container-ci"
version = "4.1.0"
description = "Implements CI builds for script-language-container."

requires-python = ">=3.10, <3.14"

license = "MIT"

authors = [
    { name="Thomas Uebensee", email="Thomas Uebensee <ext.thomas.uebensee@exasol.com>" }
]

dependencies = [
"click (>=8.1.7, <9.0.0)",
"GitPython (>=3.1.0, <4.0.0)",
"exasol-script-languages-container-tool @ git+https://github.com/exasol/script-languages-container-tool.git@feature/346_runner_support_ARM",
"PyGithub (>=2.3.0, <3.0.0)",
"setuptools (>=80.0.0)",
]

[project.scripts]
exaslc-ci = 'exasol.slc_ci.cli.main:main'

[tool.poetry]
requires-poetry = ">=2.3.0"

packages = [
    {include = "README.md"},
    {include = "LICENSE"},
    {include = "exasol"},
]

[poetry.urls]
Homepage = "https://www.exasol.com/"
Source = "https://github.com/exasol/script-languages-container-ci"
Issues = "https://github.com/exasol/script-languages-container-ci/issues"
Changelog = "https://github.com/exasol/script-languages-container-ci/doc/changes"

[build-system]
requires = ["poetry_core>=2.1.0"]
build-backend = "poetry.core.masonry.api"


[dependency-groups]

dev = [
    "toml>=0.10.2",
    "pytest>=7.1.1, <8.0.0",
    "pytest-mock>=3.7.0, <4.0.0",
    "exasol-toolbox>=5.1.1, <6.0.0",
    ]

[tool.black]
line-length = 88
verbose = false
include = "\\.pyi?$"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--ignore=test/integration/resources"

testpaths = [
    "test"
]

[[tool.mypy.overrides]]
module = ["docker.*", "toml"]
ignore_missing_imports = true

[tool.ruff.lint]
extend-ignore = [
    "E", # Syntax errors
    "F", # Pyflakes rules (excluding F401)
    "UP", # pyupgrade rules
    "D", # Docstring rules
]
extend-select = ["F401"]

unfixable = []

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 120
disable = """
    W,R,C,
"""
[tool.sonar]
projectKey = "com.exasol:script-languages-container-ci"
hostUrl = "https://sonarcloud.io"
organization = "exasol"

